tests/errors/semantic/blocking/DECORATOR_WRONG_NUMBER_TYPES.py
# pylint: disable=missing-function-docstring, missing-module-docstring
from pyccel.decorators import types


@types('int')
def func(n,m):
    return n + m
